fix z-index to avoid it showing the modal behind the vertical tabs on node/add

--- a/modules/df/df_tools/df_tools_icons/css/iconpicker.css
+++ b/modules/df/df_tools/df_tools_icons/css/iconpicker.css
@@ -8,7 +8,7 @@
 }
 
 .iconpicker-popover {
-  z-index: 1;
+  z-index: 2;
 }
 
 .iconpicker-component {
